# FlamEdge

./: .gitignore  APK_INFO.txt  INSTALL_ON_DEVICE.md  LICENSE  NOTICE  README.md  build.gradle  gradle.properties  run-on-emulator.ps1
.github/workflows/: release.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  processor.cpp  processor.h
app/src/main/java/com/edgeviewer/app/: EdgeViewerApp.kt  MainActivity.kt  NativeBridge.kt
app/src/main/java/com/edgeviewer/app/camera/: CameraController.kt
app/src/main/java/com/edgeviewer/app/net/: HttpFrameServer.kt
app/src/main/java/com/edgeviewer/app/renderer/: FrameListener.kt  GLPreviewSurface.kt  PipelineRenderer.kt  ShaderHelper.kt
app/src/main/java/com/edgeviewer/app/util/: FpsAverager.kt  SaveUtils.kt  YuvConverter.kt
app/src/main/java/com/edgeviewer/app/viewmodel/: CameraViewModel.kt
app/src/main/res/drawable/: bottom_controls_background.xml  error_background.xml  flamedge_foreground.xml  fps_background.xml  top_overlay_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
web/: package.json  tsconfig.json
web/src/: index.html  main.ts  styles.css
web/src/assets/: sampleFrame.ts
web/src/types/: shims.d.ts
